Fix some minor layout bugs

--- a/css/default.css
+++ b/css/default.css
@@ -2100,6 +2100,7 @@ section.footnotes > hr:first-child.highlighted::before {
     */
 #markdownBody .admonition .marginnote.sidenote {
     width: calc(50vw - ((100% + (2.875em / (0.85/0.875)))/2 + 96px));
+    right: calc(100% + (2.875em / (0.85/0.875)) + 64px);
 }
 
 /**********/
